tagesschau example structure added

--- a/src/pages/inland.html
+++ b/src/pages/inland.html
@@ -79,21 +79,13 @@
       media="(min-width: 1024px)"
     />
 
-    <link rel="stylesheet" href="/resources/assets/css/main-01138ab4b965f85d5301.css" />
-
+    <link rel="stylesheet" href="/css/inland.css" />
     <script src="/resources/assets/main-21ec1a7aff65d7adcdda.bundle.js" defer></script>
 
     <script src="/resources/assets/myardapp-e9e31f3286f9de41fd1f.bundle.js" defer></script>
 
     <script src="/resources/assets/js/ts/smartbanner/smartbanner.min.js"></script>
-    <link rel="stylesheet" href="/resources/assets/js/ts/smartbanner/smartbanner.min.css" />
 
-    <link
-      id="darkmode-css"
-      rel="stylesheet"
-      media="(prefers-color-scheme: dark)"
-      href="/resources/assets/css/darkmode-e0368e315e16add9a4ea.css"
-    />
     <script>
       let isDarkmode =
         document.cookie.includes('darkmode_content=show') &&
