article structure added

--- a/src/pages/inland.html
+++ b/src/pages/inland.html
@@ -112,6 +112,51 @@
     <link rel="icon" type="image/png" href="/resources/assets/image/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/png" href="/resources/assets/image/favicon/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/resources/assets/image/favicon/favicon-16x16.png" sizes="16x16" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "NewsArticle",
+            "headline": "\"Ich bin dazu auch nie befragt worden\"",
+            "articleSection": "Spahn zu Masken-Bericht",
+            "description": "Unionsfraktionschef Spahn kritisiert den unveröffentlichten Bericht zu Masken-Bestellungen während seiner Zeit als Gesundheitsminister als 'subjektive Wertungen einer Person'. Die darin gegen ihn erhobenen Vorwürfe weist er zurück.",
+            "url": "localhost:3000/inland-article-1"
+          },
+          {
+            "@type": "NewsArticle",
+            "headline": "\"Es war höchste Zeit für diesen Schritt\"",
+            "articleSection": "Klöckner eröffnet Veteranentag",
+            "description": "In Berlin hat Bundestagspräsidentin Klöckner den ersten Nationalen Veteranentag eröffnet. Mehr als 120 Veranstaltungen im ganzen Land würdigen den Einsatz aktiver und ehemaliger Soldaten und Soldatinnen.",
+            "url": "localhost:3000/inland-article-2"
+          },
+          {
+            "@type": "NewsArticle",
+            "headline": "Kampf um die beste Geschäftsidee",
+            "articleSection": "Start-ups im Boxring",
+            "description": "16 Teams treten beim 'Startup-Fightclub' in Dessau-Roßlau im Boxring gegeneinander an. Sie stellen ihr Unternehmen der Jury und dem Publikum vor. Hier wird schnell klar: Eine gute Geschäftsidee allein reicht noch nicht aus.",
+            "author": {
+              "@type": "Person",
+              "name": "Manuel Mehlhorn"
+            },
+            "url": "localhost:3000/inland-article-3"
+          },
+          {
+            "@type": "NewsArticle",
+            "headline": "Ringen um Anerkennung in schwierigen Zeiten",
+            "articleSection": "Deutscher Veteranentag",
+            "url": "localhost:3000/inland-article-4"
+          },
+          {
+            "@type": "NewsArticle",
+            "headline": "Neue Ideen für mehr Nachwuchs bei der Bundeswehr",
+            "articleSection": "Wehrpflicht-Debatte",
+            "url": "localhost:3000/inland-article-5"
+          }
+        ]
+      }
+    </script>
     <meta name="msapplication-TileColor" content="#0BA6CD" />
     <meta name="msapplication-TileImage" content="/resources/assets/image/favicon/mstile-70x70.png" />
     <meta name="msapplication-TileImage" content="/resources/assets/image/favicon/mstile-144x144.png" />
@@ -4548,7 +4593,7 @@
                 </div>
 
                 <div class="columns twelve">
-                  <a class="teaser__link" href="/inland/innenpolitik/spahn-maskenbeschaffung-bab-100.html">
+                  <a class="teaser__link" href="/inland-article-1">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__h3">
@@ -4653,7 +4698,7 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inland/innenpolitik/kloeckner-veteranentag-100.html">
+                  <a class="teaser__link" href="/inland-article-2">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__headline-wrapper">
@@ -4756,7 +4801,7 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inland/mittendrin/dessau-rosslau-start-up-fight-club-100.html">
+                  <a class="teaser__link" href="/inland-article-3">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <div class="teaser__label">
@@ -4865,7 +4910,7 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inland/gesellschaft/deutscher-veteranentag-100.html">
+                      <a class="teaser-xs__link" href="/inland-article-4">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">Deutscher Veteranentag</span>
                           <span class="teaser-xs__headline"> Ringen um Anerkennung in schwierigen Zeiten </span>
@@ -4955,7 +5000,7 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inland/innenpolitik/wehrpflicht-debatte-veteranentag-100.html">
+                      <a class="teaser-xs__link" href="/inland-article-5">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">Wehrpflicht-Debatte</span>
                           <span class="teaser-xs__headline"> Neue Ideen für mehr Nachwuchs bei der Bundeswehr </span>
