Initial commit for IOSL-8/filling-fictive-tagesschau

--- a/src/pages/inland.html
+++ b/src/pages/inland.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>Aktuelle Nachrichten aus Deutschland | tagesschau.de</title>
+    <title>Aktuelle Nachrichten aus Tuberlinlandia | tagesschow.tub</title>
 
     <link rel="preconnect" href="https://images.tagesschau.de" crossorigin />
 
@@ -79,7 +79,7 @@
       media="(min-width: 1024px)"
     />
 
-    <link rel="stylesheet" href="/css/inland.css" />
+     <link rel="stylesheet" href="../css/inland.css" />
     <script src="/resources/assets/main-21ec1a7aff65d7adcdda.bundle.js" defer></script>
 
     <script src="/resources/assets/myardapp-e9e31f3286f9de41fd1f.bundle.js" defer></script>
@@ -4597,14 +4597,14 @@
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__h3">
-                          <span class="teaser__topline">Spahn zu Masken-Bericht</span>
-                          <span class="teaser__headline">"Ich bin dazu auch nie befragt worden"</span>
+                          <span class="teaser__topline">Politics | Technology | AI Regulation</span>
+                          <span class="teaser__headline">Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club</span>
                         </h3>
 
                         <p class="teaser__shorttext">
-                          Unionsfraktionschef Spahn kritisiert den unveröffentlichten Bericht zu Masken-Bestellungen
-                          während seiner Zeit als Gesundheitsminister als "subjektive Wertungen einer Person". Die darin
-                          gegen ihn erhobenen Vorwürfe weist er zurück.
+                          Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical Society, 
+                          a group long suspected of clandestine research into advanced algorithms reminiscent of the notorious Deltasync AI. 
+                          The meeting raises concerns about transparency and the government’s stance on AI regulation.
                           <span class="link-extend teaser--top">mehr</span>
                         </p>
                       </div>
@@ -4702,14 +4702,14 @@
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__headline-wrapper">
-                          <span class="teaser__topline">Klöckner eröffnet Veteranentag</span>
-                          <span class="teaser__headline">"Es war höchste Zeit für diesen Schritt"</span>
+                          <span class="teaser__topline"> History | Politics | Security</span>
+                          <span class="teaser__headline">From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over Tuberlinlandia's Security</span>
                         </h3>
 
                         <p class="teaser__shorttext">
-                          In Berlin hat Bundestagspräsidentin Klöckner den ersten Nationalen Veteranentag eröffnet. Mehr
-                          als 120 Veranstaltungen im ganzen Land würdigen den Einsatz aktiver und ehemaliger Soldaten
-                          und Soldatinnen.
+                          A historical look at how political ties with AI development groups and rogue robot colonies in the Netether dimension have 
+                          repeatedly threatened Tuberlinlandia's security. The latest scandal involving Minister Paul Schwertz revives old fears and 
+                          poses new risks for his party's future.
                           <span class="link-extend">mehr</span>
                         </p>
                       </div>
