Update 1st article

--- a/src/pages/inlandArticle2.html
+++ b/src/pages/inlandArticle2.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
 
-    <title>Klöckner eröffnet Veteranentag: "Höchste Zeit für diesen Schritt" | tagesschau.de</title>
+    <title>From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over 
+Tuberlinlandia's Security</title>
 
     <link rel="preconnect" href="https://images.tagesschau.de" crossorigin="" />
 
