--- a/src/pages/pages-with-table/tablePage1/tablePage1-microdata.html
+++ b/src/pages/pages-with-table/tablePage1/tablePage1-microdata.html
@@ -33,15 +33,17 @@
     </div>
 
     <script type="module">
-      import { tablePage1Data } from '../data/tablePage1Data.js'
-      const tbody = document.querySelector('#people-table tbody')
+      fetch('/api/people/table-page-1')
+        .then(res => res.json())
+        .then(tablePage1Data => {
+          const tbody = document.querySelector('#people-table tbody')
 
-      tablePage1Data.forEach((person, idx) => {
-        const tr = document.createElement('tr')
-        tr.setAttribute('itemscope', '')
-        tr.setAttribute('itemprop', 'itemListElement')
-        tr.setAttribute('itemtype', 'https://schema.org/Person')
-        tr.innerHTML = `
+          tablePage1Data.forEach((person, idx) => {
+            const tr = document.createElement('tr')
+            tr.setAttribute('itemscope', '')
+            tr.setAttribute('itemprop', 'itemListElement')
+            tr.setAttribute('itemtype', 'https://schema.org/Person')
+            tr.innerHTML = `
           <td itemprop="identifier">${person.id}</td>
           <td itemprop="givenName">${person.first_name}</td>
           <td itemprop="familyName">${person.last_name}</td>
@@ -49,8 +51,9 @@
           <td itemprop="gender">${person.gender}</td>
           <td itemprop="ipAddress">${person.ip_address}</td>
         `
-        tbody.appendChild(tr)
-      })
+            tbody.appendChild(tr)
+          })
+        })
     </script>
   </body>
 </html>
