fixed linking between pages

--- a/src/pages/inlandJSONLD.html
+++ b/src/pages/inlandJSONLD.html
@@ -4592,7 +4592,7 @@
                 </div>
 
                 <div class="columns twelve">
-                  <a class="teaser__link" href="/inlandArticle1JSONLD">
+                  <a class="teaser__link" href="/inland-1-jsonld">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__h3">
@@ -4697,7 +4697,7 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inlandArticle2JSONLD">
+                  <a class="teaser__link" href="/inland-2-jsonld">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__headline-wrapper">
@@ -4800,7 +4800,7 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inlandArticle3JSONLD">
+                  <a class="teaser__link" href="/inland-3-jsonld">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <div class="teaser__label">
@@ -4907,7 +4907,7 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inlandArticle4JSONLD">
+                      <a class="teaser-xs__link" href="/inland-4-jsonld">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">Ancient Sounds, New Voices</span>
                           <span class="teaser-xs__headline"> Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance </span>
@@ -4997,7 +4997,7 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inlandArticle5JSONLD">
+                      <a class="teaser-xs__link" href="/inland-5-jsonld">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">GeneFab Scandal</span>
                           <span class="teaser-xs__headline"> Private Lab Accused of Growing Cognitive Twins for Data Harvesting </span>
