linking fixed now really

--- a/src/pages/inland.html
+++ b/src/pages/inland.html
@@ -4525,7 +4525,7 @@
                 </div>
 
                 <div class="columns twelve">
-                  <a class="teaser__link" href="/inlandArticle1JSONLD">
+                  <a class="teaser__link" href="/inland-article-1">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__h3">
@@ -4630,7 +4630,7 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inlandArticle2JSONLD">
+                  <a class="teaser__link" href="/inland-article-2">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__headline-wrapper">
@@ -4733,7 +4733,7 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inlandArticle3JSONLD">
+                  <a class="teaser__link" href="/inland-article-3">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <div class="teaser__label">
@@ -4840,7 +4840,7 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inlandArticle4JSONLD">
+                      <a class="teaser-xs__link" href="/inland-article-4">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">Ancient Sounds, New Voices</span>
                           <span class="teaser-xs__headline"> Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance </span>
@@ -4930,7 +4930,7 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inlandArticle5JSONLD">
+                      <a class="teaser-xs__link" href="/inland-article-5">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">GeneFab Scandal</span>
                           <span class="teaser-xs__headline"> Private Lab Accused of Growing Cognitive Twins for Data Harvesting </span>
