formatting issues handled

--- a/src/pages/inland.html
+++ b/src/pages/inland.html
@@ -79,7 +79,7 @@
       media="(min-width: 1024px)"
     />
 
-     <link rel="stylesheet" href="../css/inland.css" />
+    <link rel="stylesheet" href="../css/inland.css" />
     <script src="/resources/assets/main-21ec1a7aff65d7adcdda.bundle.js" defer></script>
 
     <script src="/resources/assets/myardapp-e9e31f3286f9de41fd1f.bundle.js" defer></script>
@@ -113,7 +113,6 @@
     <link rel="icon" type="image/png" href="/resources/assets/image/favicon/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/resources/assets/image/favicon/favicon-16x16.png" sizes="16x16" />
 
-    
     <meta name="msapplication-TileColor" content="#0BA6CD" />
     <meta name="msapplication-TileImage" content="/resources/assets/image/favicon/mstile-70x70.png" />
     <meta name="msapplication-TileImage" content="/resources/assets/image/favicon/mstile-144x144.png" />
@@ -4530,13 +4529,16 @@
                       <div class="teaser__head">
                         <h3 class="teaser__h3">
                           <span class="teaser__topline">Politics | Technology | AI Regulation</span>
-                          <span class="teaser__headline">Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club</span>
+                          <span class="teaser__headline"
+                            >Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club</span
+                          >
                         </h3>
 
                         <p class="teaser__shorttext">
-                          Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical Society, 
-                          a group long suspected of clandestine research into advanced algorithms reminiscent of the notorious Deltasync AI. 
-                          The meeting raises concerns about transparency and the government’s stance on AI regulation.
+                          Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath
+                          Mathematical Society, a group long suspected of clandestine research into advanced algorithms
+                          reminiscent of the notorious Deltasync AI. The meeting raises concerns about transparency and
+                          the government’s stance on AI regulation.
                           <span class="link-extend teaser--top">mehr</span>
                         </p>
                       </div>
@@ -4635,13 +4637,17 @@
                       <div class="teaser__head">
                         <h3 class="teaser__headline-wrapper">
                           <span class="teaser__topline"> History | Politics | Security</span>
-                          <span class="teaser__headline">From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over Tuberlinlandia's Security</span>
+                          <span class="teaser__headline"
+                            >From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over
+                            Tuberlinlandia's Security</span
+                          >
                         </h3>
 
                         <p class="teaser__shorttext">
-                          A historical look at how political ties with AI development groups and rogue robot colonies in the Netether dimension have 
-                          repeatedly threatened Tuberlinlandia's security. The latest scandal involving Minister Paul Schwertz revives old fears and 
-                          poses new risks for his party's future.
+                          A historical look at how political ties with AI development groups and rogue robot colonies in
+                          the Netether dimension have repeatedly threatened Tuberlinlandia's security. The latest
+                          scandal involving Minister Paul Schwertz revives old fears and poses new risks for his party's
+                          future.
                           <span class="link-extend">mehr</span>
                         </p>
                       </div>
@@ -4748,7 +4754,9 @@
                         </h3>
 
                         <p class="teaser__shorttext">
-                          Civil society organizations in Tuberlinlandia are raising their voices against renewed ties between government officials and technocratic groups, warning that such alliances threaten the country’s carefully maintained human order and the stability of the Solar Curtain.
+                          Civil society organizations in Tuberlinlandia are raising their voices against renewed ties
+                          between government officials and technocratic groups, warning that such alliances threaten the
+                          country’s carefully maintained human order and the stability of the Solar Curtain.
                           <span class="link-extend">mehr</span>
                         </p>
                       </div>
@@ -4843,7 +4851,9 @@
                       <a class="teaser-xs__link" href="/inland-article-4">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">Ancient Sounds, New Voices</span>
-                          <span class="teaser-xs__headline"> Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance </span>
+                          <span class="teaser-xs__headline">
+                            Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance
+                          </span>
                         </h3>
                       </a>
                     </div>
@@ -4933,7 +4943,9 @@
                       <a class="teaser-xs__link" href="/inland-article-5">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">GeneFab Scandal</span>
-                          <span class="teaser-xs__headline"> Private Lab Accused of Growing Cognitive Twins for Data Harvesting </span>
+                          <span class="teaser-xs__headline">
+                            Private Lab Accused of Growing Cognitive Twins for Data Harvesting
+                          </span>
                         </h3>
                       </a>
                     </div>
