--- a/src/pages/inlandArticle1.html
+++ b/src/pages/inlandArticle1.html
@@ -77,7 +77,7 @@
       media="(min-width: 1024px)"
     />
 
-     <link rel="stylesheet" href="../css/inland.css" />
+    <link rel="stylesheet" href="../css/inland.css" />
 
     <script src="/resources/assets/main-21ec1a7aff65d7adcdda.bundle.js" defer=""></script>
 
@@ -128,7 +128,10 @@
 
     <meta name="twitter:card" content="summary_large_image" />
 
-    <meta name="twitter:title" content='Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club' />
+    <meta
+      name="twitter:title"
+      content="Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club"
+    />
 
     <meta
       name="twitter:description"
@@ -146,14 +149,12 @@
       content="https://images.tagesschau.de/image/6b614ca6-7eb7-480d-b069-aa1cdd437b0b/AAABl3R81G4/AAABkZLlo-k/16x9-big/sendungsbild-1563820.jpg?width=1280"
     />
 
-    
-    <meta property="og:title" content="Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club" />
-
-
     <meta
-      property="og:url"
-      content="https://www.tagesschau.de/inland/technik/schwertz-vivrath-ki-100.html"
+      property="og:title"
+      content="Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club"
     />
+
+    <meta property="og:url" content="https://www.tagesschau.de/inland/technik/schwertz-vivrath-ki-100.html" />
 
     <meta
       property="og:description"
@@ -177,7 +178,10 @@
 
     <meta name="author" content="" />
 
-    <meta name="keywords" content="Paul Schwertz, Vivrath Mathematical Society, Deltasync, AI Regulation, Tuberlinlandia" />
+    <meta
+      name="keywords"
+      content="Paul Schwertz, Vivrath Mathematical Society, Deltasync, AI Regulation, Tuberlinlandia"
+    />
 
     <meta name="smartbanner:enabled-platforms" content="none" />
 
@@ -5414,8 +5418,6 @@
           <div class="layout-content scrolled" id="content">
             <article class="container content-wrapper__group">
               <div class="seitenkopf">
-                
-
                 <div class="seitenkopf__media columns twelve m-twelve">
                   <div class="ts-picture__poster-wrapper">
                     <picture class="ts-picture ts-picture--teaser-top">
@@ -5941,7 +5943,9 @@
                   <div class="seitenkopf__title">
                     <h1 class="seitenkopf__headline">
                       <span class="seitenkopf__topline">Politics | Technology | AI Regulation</span>
-                      <span class="seitenkopf__headline--text">Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club</span>
+                      <span class="seitenkopf__headline--text"
+                        >Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club</span
+                      >
                     </h1>
                     <p class="metatextline">Stand: 15.06.3005 19:58 Uhr</p>
                   </div>
@@ -5950,22 +5954,24 @@
 
               <p class="textabsatz columns twelve m-ten m-offset-one l-eight l-offset-two">
                 <strong
-                  >Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical Society, 
-                  a group long suspected of clandestine research into advanced algorithms reminiscent of the notorious Deltasync AI. 
-                  The meeting raises concerns about transparency and the government's stance on AI regulation.</strong>
+                  >Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical
+                  Society, a group long suspected of clandestine research into advanced algorithms reminiscent of the
+                  notorious Deltasync AI. The meeting raises concerns about transparency and the government's stance on
+                  AI regulation.</strong
+                >
               </p>
 
               <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
-                <em>Iosl, Tuberlinlandia</em> In a move that has sparked fresh controversy, Minister of Technology 
-                Paul Schwertz was seen entering the headquarters of the Vivrath Mathematical Society late Monday evening. 
-                The club, already under scrutiny for allegedly developing algorithms similar to those used by the infamous rogue AI 'Deltasync,' 
-                reportedly hosted Schwertz for a confidential two-hour session.
+                <em>Iosl, Tuberlinlandia</em> In a move that has sparked fresh controversy, Minister of Technology Paul
+                Schwertz was seen entering the headquarters of the Vivrath Mathematical Society late Monday evening. The
+                club, already under scrutiny for allegedly developing algorithms similar to those used by the infamous
+                rogue AI 'Deltasync,' reportedly hosted Schwertz for a confidential two-hour session.
               </p>
 
               <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
-                Sources close to the ministry have confirmed the meeting but declined to comment on its content. 
-                The Vivrath Society, known for its secretive operations and influential academic ties, has repeatedly 
-                denied any wrongdoing, yet critics argue their activities lack transparency and proper oversight.
+                Sources close to the ministry have confirmed the meeting but declined to comment on its content. The
+                Vivrath Society, known for its secretive operations and influential academic ties, has repeatedly denied
+                any wrongdoing, yet critics argue their activities lack transparency and proper oversight.
               </p>
 
               <div class="copytext-element-wrapper columns twelve copytext-element-wrapper--overlap">
@@ -6548,14 +6554,15 @@
               </div>
 
               <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
-                Opposition parties have seized on the news, demanding a full disclosure of the meeting's agenda. 
-                “The people of Tuberlinlandia deserve to know if their leaders are consorting with groups experimenting 
-                with dangerous AI technology,” said Parliamentarian Mira Kossin of the Unity Front.
+                Opposition parties have seized on the news, demanding a full disclosure of the meeting's agenda. “The
+                people of Tuberlinlandia deserve to know if their leaders are consorting with groups experimenting with
+                dangerous AI technology,” said Parliamentarian Mira Kossin of the Unity Front.
               </p>
 
               <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
-                Minister Schwertz's office issued a brief statement, claiming the meeting was “routine” and focused on “academic collaboration.” 
-                However, public trust remains fragile in the wake of last year's data breach scandal and ongoing fears of a Deltasync resurgence.
+                Minister Schwertz's office issued a brief statement, claiming the meeting was “routine” and focused on
+                “academic collaboration.” However, public trust remains fragile in the wake of last year's data breach
+                scandal and ongoing fears of a Deltasync resurgence.
               </p>
 
               <div class="copytext-element-wrapper columns twelve copytext-element-wrapper--overlap">
