--- a/src/pages/inland-new-pages/inlandArticle1/inlandArticle1JSONLDandMicrodata.html
+++ b/src/pages/inland-new-pages/inlandArticle1/inlandArticle1JSONLDandMicrodata.html
@@ -216,6 +216,14 @@
     </script>
     <script src="https://try.abtasty.com/c5b5ad1778234a70c5d2c533c4e5610f.js"></script>
 
+    <script
+      src="https://player.h-cdn.com/loader.js?customer=ard_de&amp;no_conf=true&amp;md5=972224-dd817249"
+      async=""
+    ></script>
+    <script src="https://player.h-cdn.com/config.js?customer=ard_de&amp;md5=46150-c4f08c09" async=""></script>
+    <script src="//www.gstatic.com/cast/sdk/libs/sender/1.0/cast_framework.js"></script>
+    <script src="//www.gstatic.com/eureka/clank/136/cast_sender.js"></script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -299,47 +307,6 @@
         ]
       }
     </script>
-
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "item": {
-              "@id": "/",
-              "name": "tagesschow.tub"
-            }
-          },
-          {
-            "@type": "ListItem",
-            "position": 2,
-            "item": {
-              "@id": "/inland",
-              "name": "Inland"
-            }
-          },
-          {
-            "@type": "ListItem",
-            "position": 3,
-            "item": {
-              "@id": "/inland/innenpolitik",
-              "name": "Innenpolitik"
-            }
-          }
-        ]
-      }
-    </script>
-
-    <script
-      src="https://player.h-cdn.com/loader.js?customer=ard_de&amp;no_conf=true&amp;md5=972224-dd817249"
-      async=""
-    ></script>
-    <script src="https://player.h-cdn.com/config.js?customer=ard_de&amp;md5=46150-c4f08c09" async=""></script>
-    <script src="//www.gstatic.com/cast/sdk/libs/sender/1.0/cast_framework.js"></script>
-    <script src="//www.gstatic.com/eureka/clank/136/cast_sender.js"></script>
     <style data-spark-widget-info="">
       .hola_widget_info_popup {
         position: absolute;
@@ -6069,7 +6036,7 @@
                 </div>
               </div>
 
-              <p class="textabsatz columns twelve m-ten m-offset-one l-eight l-offset-two">
+              <p class="textabsatz columns twelve m-ten m-offset-one l-eight l-offset-two" itemprop="description">
                 <strong
                   >Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical
                   Society, a group long suspected of clandestine research into advanced algorithms reminiscent of the
@@ -6078,14 +6045,15 @@
                 >
               </p>
 
-              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
-                <em>Iosl, Tuberlinlandia</em> In a move that has sparked fresh controversy, Minister of Technology Paul
-                Schwertz was seen entering the headquarters of the Vivrath Mathematical Society late Monday evening. The
-                club, already under scrutiny for allegedly developing algorithms similar to those used by the infamous
-                rogue AI 'Deltasync,' reportedly hosted Schwertz for a confidential two-hour session.
+              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve" itemprop="articleBody">
+                <em itemprop="contentLocation">Iosl, Tuberlinlandia</em> In a move that has sparked fresh controversy,
+                Minister of Technology Paul Schwertz was seen entering the headquarters of the Vivrath Mathematical
+                Society late Monday evening. The club, already under scrutiny for allegedly developing algorithms
+                similar to those used by the infamous rogue AI 'Deltasync,' reportedly hosted Schwertz for a
+                confidential two-hour session.
               </p>
 
-              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
+              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve" itemprop="articleBody">
                 Sources close to the ministry have confirmed the meeting but declined to comment on its content. The
                 Vivrath Society, known for its secretive operations and influential academic ties, has repeatedly denied
                 any wrongdoing, yet critics argue their activities lack transparency and proper oversight.
@@ -6670,16 +6638,24 @@
                 </div>
               </div>
 
-              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
-                Opposition parties have seized on the news, demanding a full disclosure of the meeting's agenda. “The
-                people of Tuberlinlandia deserve to know if their leaders are consorting with groups experimenting with
-                dangerous AI technology,” said Parliamentarian Mira Kossin of the Unity Front.
+              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve" itemprop="articleBody">
+                Opposition parties have seized on the news, demanding a full disclosure of the meeting's agenda.
+                <q itemprop="citation"
+                  >"The people of Tuberlinlandia deserve to know if their leaders are consorting with groups
+                  experimenting with dangerous AI technology,"</q
+                >
+                said
+                <span itemprop="author" itemscope itemtype="https://schema.org/Person"
+                  ><span itemprop="name">Parliamentarian Mira Kossin</span></span
+                >
+                of the Unity Front.
               </p>
 
-              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve">
-                Minister Schwertz's office issued a brief statement, claiming the meeting was “routine” and focused on
-                “academic collaboration.” However, public trust remains fragile in the wake of last year's data breach
-                scandal and ongoing fears of a Deltasync resurgence.
+              <p class="textabsatz m-ten m-offset-one l-eight l-offset-two columns twelve" itemprop="articleBody">
+                Minister Schwertz's office issued a brief statement, claiming the meeting was
+                <q itemprop="citation">"routine"</q> and focused on
+                <q itemprop="citation">"academic collaboration."</q> However, public trust remains fragile in the wake
+                of last year's data breach scandal and ongoing fears of a Deltasync resurgence.
               </p>
 
               <div class="copytext-element-wrapper columns twelve copytext-element-wrapper--overlap">
