--- a/src/pages/inland-new-pages/inlandMainPage/inlandJSONLD.html
+++ b/src/pages/inland-new-pages/inlandMainPage/inlandJSONLD.html
@@ -79,7 +79,7 @@
       media="(min-width: 1024px)"
     />
 
-     <link rel="stylesheet" href="../css/inland.css" />
+    <link rel="stylesheet" href="../css/inland.css" />
     <script src="/resources/assets/main-21ec1a7aff65d7adcdda.bundle.js" defer></script>
 
     <script src="/resources/assets/myardapp-e9e31f3286f9de41fd1f.bundle.js" defer></script>
@@ -113,49 +113,6 @@
     <link rel="icon" type="image/png" href="/resources/assets/image/favicon/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/resources/assets/image/favicon/favicon-16x16.png" sizes="16x16" />
 
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@graph": [
-          {
-            "@type": "NewsArticle",
-            "headline": "Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club",
-            "articleSection": "Politics and Technology",
-            "description": "Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical Society, a group long suspected of clandestine research into advanced algorithms reminiscent of the notorious Deltasync AI. The meeting raises concerns about transparency and the government’s stance on AI regulation.",
-            "url": "localhost:3000/inland-article-1"
-          },
-          {
-            "@type": "NewsArticle",
-            "headline": "From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over Tuberlinlandia’s Security",
-            "articleSection": "Politics and Technology",
-            "description": "A historical look at how political ties with AI development groups and rogue robot colonies in the Netether dimension have repeatedly threatened Tuberlinlandia’s security. The latest scandal involving Minister Paul Schwertz revives old fears and poses new risks for his party’s future.",
-            "url": "localhost:3000/inland-article-2"
-          },
-          {
-            "@type": "NewsArticle",
-            "headline": "Humanist Groups Voice Alarm Over Technocratic Alliances: “No Place for Radical AI in Tuberlinlandia”",
-            "articleSection": "Society and Politics",
-            "description": "Civil society organizations in Tuberlinlandia are raising their voices against renewed ties between government officials and technocratic groups, warning that such alliances threaten the country’s carefully maintained human order and the stability of the Solar Curtain.",
-            "url": "localhost:3000/inland-article-3"
-          },
-          {
-            "@type": "NewsArticle",
-            "headline": "Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance",
-            "articleSection": "Ancient Sounds, New Voices",
-            "description": "A new generation of Tuberlinian musicians is breathing life into the nation's forgotten folk instruments, reviving age-old melodies and sparking a vibrant folk music revival across the country.",
-            "url": "localhost:3000/inland-article-4"
-          },
-          {
-            "@type": "NewsArticle",
-            "headline": "Private Lab Accused of Growing Cognitive Twins for Data Harvesting",
-            "articleSection": "GeneFab Scandal",
-            "description": "Explosive documents suggest GeneFab, a top biotech firm, has been illegally engineering neural “twins” of high-profile citizens to simulate their thought processes for commercial and predictive use. Whistleblowers allege state agencies were aware—and quietly supportive.",
-           
-            "url": "localhost:3000/inland-article-5"
-          }
-        ]
-      }
-    </script>
     <meta name="msapplication-TileColor" content="#0BA6CD" />
     <meta name="msapplication-TileImage" content="/resources/assets/image/favicon/mstile-70x70.png" />
     <meta name="msapplication-TileImage" content="/resources/assets/image/favicon/mstile-144x144.png" />
@@ -298,91 +255,85 @@
       }
     </script>
 
+    <!-- JSON-LD for teaser content -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
+        "@type": "ItemList",
         "itemListElement": [
           {
             "@type": "ListItem",
             "position": 1,
             "item": {
-              "@id": "/",
-              "name": "tagesschau.de"
+              "@type": "NewsArticle",
+              "headline": "Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club",
+              "alternativeHeadline": "Politics | Technology | AI Regulation",
+              "description": "Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical Society, a group long suspected of clandestine research into advanced algorithms reminiscent of the notorious Deltasync AI. The meeting raises concerns about transparency and the government's stance on AI regulation.",
+              "url": "/inland-1-jsonld",
+              "articleSection": "Politics, Technology, AI Regulation",
+              "keywords": [
+                "Paul Schwertz",
+                "Vivrath Mathematical Society",
+                "AI Regulation",
+                "Deltasync AI",
+                "Tuberlinlandia"
+              ]
             }
           },
           {
             "@type": "ListItem",
             "position": 2,
             "item": {
-              "@id": "/inland",
-              "name": "Inland"
+              "@type": "NewsArticle",
+              "headline": "From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over Tuberlinlandia's Security",
+              "alternativeHeadline": "History | Politics | Security",
+              "description": "A historical look at how political ties with AI development groups and rogue robot colonies in the Netether dimension have repeatedly threatened Tuberlinlandia's security. The latest scandal involving Minister Paul Schwertz revives old fears and poses new risks for his party's future.",
+              "url": "/inland-2-jsonld",
+              "articleSection": "History, Politics, Security",
+              "keywords": ["Netether", "AI Groups", "Tuberlinlandia Security", "Paul Schwertz", "Robot Colonies"]
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "item": {
+              "@type": "NewsArticle",
+              "headline": "No Place for Radical AI in Tuberlinlandia",
+              "alternativeHeadline": "Humanist Groups Voice Alarm Over Technocratic Alliances",
+              "description": "Civil society organizations in Tuberlinlandia are raising their voices against renewed ties between government officials and technocratic groups, warning that such alliances threaten the country's carefully maintained human order and the stability of the Solar Curtain.",
+              "url": "/inland-3-jsonld",
+              "articleSection": "Civil Society, AI Ethics, Politics",
+              "keywords": ["Humanist Groups", "Technocratic Alliances", "Solar Curtain", "Tuberlinlandia", "AI Ethics"]
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "item": {
+              "@type": "NewsArticle",
+              "headline": "Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance",
+              "alternativeHeadline": "Ancient Sounds, New Voices",
+              "description": "Traditional folk instruments are experiencing a revival in Tuberlinlandia, sparking a cultural renaissance that brings together ancient sounds and contemporary voices.",
+              "url": "/inland-4-jsonld",
+              "articleSection": "Culture, Music, Society",
+              "keywords": ["Folk Instruments", "Cultural Renaissance", "Tuberlinlandia", "Traditional Music"]
+            }
+          },
+          {
+            "@type": "ListItem",
+            "position": 5,
+            "item": {
+              "@type": "NewsArticle",
+              "headline": "Private Lab Accused of Growing Cognitive Twins for Data Harvesting",
+              "alternativeHeadline": "GeneFab Scandal",
+              "description": "A private laboratory is under investigation for allegedly creating cognitive twins for the purpose of data harvesting, raising serious ethical concerns about genetic experimentation and privacy violations.",
+              "url": "/inland-article-5",
+              "articleSection": "Science, Ethics, Investigation",
+              "keywords": ["GeneFab", "Cognitive Twins", "Data Harvesting", "Genetic Ethics", "Privacy Scandal"]
             }
           }
         ]
       }
-    </script>
-    
-    <!-- JSON-LD for teaser content -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ItemList",
-      "itemListElement": [
-        {
-          "@type": "ListItem",
-          "position": 1,
-          "item": {
-            "@type": "NewsArticle",
-            "headline": "Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club",
-            "alternativeHeadline": "Politics | Technology | AI Regulation",
-            "description": "Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical Society, a group long suspected of clandestine research into advanced algorithms reminiscent of the notorious Deltasync AI. The meeting raises concerns about transparency and the government's stance on AI regulation.",
-            "url": "/inland-1-jsonld",
-            "articleSection": "Politics, Technology, AI Regulation",
-            "keywords": ["Paul Schwertz", "Vivrath Mathematical Society", "AI Regulation", "Deltasync AI", "Tuberlinlandia"]
-          }
-        },
-        {
-          "@type": "ListItem",
-          "position": 2,
-          "item": {
-            "@type": "NewsArticle",
-            "headline": "From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over Tuberlinlandia's Security",
-            "alternativeHeadline": "History | Politics | Security",
-            "description": "A historical look at how political ties with AI development groups and rogue robot colonies in the Netether dimension have repeatedly threatened Tuberlinlandia's security. The latest scandal involving Minister Paul Schwertz revives old fears and poses new risks for his party's future.",
-            "url": "/inland-2-jsonld",
-            "articleSection": "History, Politics, Security",
-            "keywords": ["Netether", "AI Groups", "Tuberlinlandia Security", "Paul Schwertz", "Robot Colonies"]
-          }
-        },
-        {
-          "@type": "ListItem",
-          "position": 3,
-          "item": {
-            "@type": "NewsArticle",
-            "headline": "No Place for Radical AI in Tuberlinlandia",
-            "alternativeHeadline": "Humanist Groups Voice Alarm Over Technocratic Alliances",
-            "description": "Civil society organizations in Tuberlinlandia are raising their voices against renewed ties between government officials and technocratic groups, warning that such alliances threaten the country's carefully maintained human order and the stability of the Solar Curtain.",
-            "url": "/inland-3-jsonld",
-            "articleSection": "Civil Society, AI Ethics, Politics",
-            "keywords": ["Humanist Groups", "Technocratic Alliances", "Solar Curtain", "Tuberlinlandia", "AI Ethics"]
-          }
-        },
-        {
-          "@type": "ListItem",
-          "position": 4,
-          "item": {
-            "@type": "NewsArticle",
-            "headline": "Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance",
-            "alternativeHeadline": "Ancient Sounds, New Voices",
-            "description": "Traditional folk instruments are experiencing a revival in Tuberlinlandia, sparking a cultural renaissance that brings together ancient sounds and contemporary voices.",
-            "url": "/inland-4-jsonld",
-            "articleSection": "Culture, Music, Society",
-            "keywords": ["Folk Instruments", "Cultural Renaissance", "Tuberlinlandia", "Traditional Music"]
-          }
-        }
-      ]
-    }
     </script>
   </head>
 
@@ -4654,18 +4605,21 @@
                 </div>
 
                 <div class="columns twelve">
-                  <a class="teaser__link" href="/inland-1-jsonld">
+                  <a class="teaser__link" href="/inland-article-1">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__h3">
                           <span class="teaser__topline">Politics | Technology | AI Regulation</span>
-                          <span class="teaser__headline">Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club</span>
+                          <span class="teaser__headline"
+                            >Minister Paul Schwertz Holds Secret Meeting with Controversial Vivrath Math Club</span
+                          >
                         </h3>
 
                         <p class="teaser__shorttext">
-                          Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath Mathematical Society, 
-                          a group long suspected of clandestine research into advanced algorithms reminiscent of the notorious Deltasync AI. 
-                          The meeting raises concerns about transparency and the government’s stance on AI regulation.
+                          Minister of Technology Paul Schwertz reportedly met behind closed doors with the Vivrath
+                          Mathematical Society, a group long suspected of clandestine research into advanced algorithms
+                          reminiscent of the notorious Deltasync AI. The meeting raises concerns about transparency and
+                          the government’s stance on AI regulation.
                           <span class="link-extend teaser--top">mehr</span>
                         </p>
                       </div>
@@ -4759,18 +4713,22 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inland-2-jsonld">
+                  <a class="teaser__link" href="/inland-article-2">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <h3 class="teaser__headline-wrapper">
                           <span class="teaser__topline"> History | Politics | Security</span>
-                          <span class="teaser__headline">From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over Tuberlinlandia's Security</span>
+                          <span class="teaser__headline"
+                            >From Netether to Now: Political Alliances with AI Groups Have Long Shadow Over
+                            Tuberlinlandia's Security</span
+                          >
                         </h3>
 
                         <p class="teaser__shorttext">
-                          A historical look at how political ties with AI development groups and rogue robot colonies in the Netether dimension have 
-                          repeatedly threatened Tuberlinlandia's security. The latest scandal involving Minister Paul Schwertz revives old fears and 
-                          poses new risks for his party's future.
+                          A historical look at how political ties with AI development groups and rogue robot colonies in
+                          the Netether dimension have repeatedly threatened Tuberlinlandia's security. The latest
+                          scandal involving Minister Paul Schwertz revives old fears and poses new risks for his party's
+                          future.
                           <span class="link-extend">mehr</span>
                         </p>
                       </div>
@@ -4862,7 +4820,7 @@
                 </div>
 
                 <div class="columns twelve m-eight">
-                  <a class="teaser__link" href="/inland-3-jsonld">
+                  <a class="teaser__link" href="/inland-article-3">
                     <div class="teaser__teaserinfo">
                       <div class="teaser__head">
                         <div class="teaser__label">
@@ -4877,7 +4835,9 @@
                         </h3>
 
                         <p class="teaser__shorttext">
-                          Civil society organizations in Tuberlinlandia are raising their voices against renewed ties between government officials and technocratic groups, warning that such alliances threaten the country’s carefully maintained human order and the stability of the Solar Curtain.
+                          Civil society organizations in Tuberlinlandia are raising their voices against renewed ties
+                          between government officials and technocratic groups, warning that such alliances threaten the
+                          country’s carefully maintained human order and the stability of the Solar Curtain.
                           <span class="link-extend">mehr</span>
                         </p>
                       </div>
@@ -4969,10 +4929,12 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inland-4-jsonld">
+                      <a class="teaser-xs__link" href="/inland-article-4">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">Ancient Sounds, New Voices</span>
-                          <span class="teaser-xs__headline"> Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance </span>
+                          <span class="teaser-xs__headline">
+                            Tuberlinlandia's Folk Instruments Spark a Cultural Renaissance
+                          </span>
                         </h3>
                       </a>
                     </div>
@@ -5059,10 +5021,12 @@
 
                   <div class="teaser-xs__teaserinfo columns eight">
                     <div class="teaser-xs__teaserheadline list--separator">
-                      <a class="teaser-xs__link" href="/inland-5-jsonld">
+                      <a class="teaser-xs__link" href="/inland-article-5">
                         <h3 class="teaser-xs__headline-wrapper">
                           <span class="teaser-xs__topline">GeneFab Scandal</span>
-                          <span class="teaser-xs__headline"> Private Lab Accused of Growing Cognitive Twins for Data Harvesting </span>
+                          <span class="teaser-xs__headline">
+                            Private Lab Accused of Growing Cognitive Twins for Data Harvesting
+                          </span>
                         </h3>
                       </a>
                     </div>
